Added logging Added heap options